Cycles - Light Tree is really slow to preview textures on high res models #105550

Closed
opened 2023-03-07 21:05:26 +01:00 by Nahuel Belich · 6 comments

System Information
Operating system: Ubuntu 22.04.2 LTS
Graphics card:NVIDIA Corporation GP104[GeForce GTX 1070]drv.nvidia 515_proprietary

Blender Version
Broken: 48944e7a8e 3.6 alpha
Worked:

Short description of error
Light tree makes previewing textures really slow process if the object has a dense mesh.

Exact steps for others to reproduce the error

  1. Open the attached file.
  2. Start render preview in the viewport.
  3. Use shift+Ctrl+click in the different nodes to preview them (even the empty map range) this should be smooth.
  4. Enable Light Tree.
  5. Repeat "step 3".
    The bsdf nodes should switch smooth, however the "textures" nodes and the emmision shader are going to take a long time near a minute (depends on the machine of course).

NOTE: Im not sure if this is a bug or if its how the light tree works, didn't see any warning about it, a colleague and I spend a while playing around to find out what was happening, and the solution end up being easy, to preview for working on materials just turn it off.
Since im not sure i choose to report it.

**System Information** Operating system: Ubuntu 22.04.2 LTS Graphics card:NVIDIA Corporation GP104[GeForce GTX 1070]drv.nvidia 515_proprietary **Blender Version** Broken: 48944e7a8ea0 3.6 alpha Worked: **Short description of error** Light tree makes previewing textures really slow process if the object has a dense mesh. **Exact steps for others to reproduce the error** 1. Open the attached file. 2. Start render preview in the viewport. 3. Use shift+Ctrl+click in the different nodes to preview them (even the empty map range) this should be smooth. 4. Enable Light Tree. 5. Repeat "step 3". The bsdf nodes should switch smooth, however the "textures" nodes and the emmision shader are going to take a long time near a minute (depends on the machine of course). NOTE: Im not sure if this is a bug or if its how the light tree works, didn't see any warning about it, a colleague and I spend a while playing around to find out what was happening, and the solution end up being easy, to preview for working on materials just turn it off. Since im not sure i choose to report it.
Nahuel Belich added the
Severity
Normal
Status
Needs Triage
Type
Report
labels 2023-03-07 21:05:27 +01:00
Iliya Katushenock added the
Interest
Render & Cycles
label 2023-03-07 21:23:52 +01:00

This is related to not building the Light Tree in parallel which is an open todo from #77889.

Every triangle that is emissive needs to be used in building the light tree. This is why an Emission shader in the example is slow. As well as with previewing non-BSDFs; those use emission behind the scenes for viewing etc.

A quick profile from the provided .blend shows this is all light tree build related (attached).

I'm unsure if I should mark this as a duplicate right away though.

This is related to not building the Light Tree in parallel which is an open todo from #77889. Every triangle that is emissive needs to be used in building the light tree. This is why an Emission shader in the example is slow. As well as with previewing non-BSDFs; those use emission behind the scenes for viewing etc. A quick profile from the provided .blend shows this is all light tree build related (attached). I'm unsure if I should mark this as a duplicate right away though.
Author

i see, makes sense, thanks for the info.
still would be nice if there was a warning or a note in the release notes or in the hint about using high res models with light tree for setting up materials.

i see, makes sense, thanks for the info. still would be nice if there was a warning or a note in the release notes or in the hint about using high res models with light tree for setting up materials.
Member

This is related to not building the Light Tree in parallel which is an open todo from #77889.
I'm unsure if I should mark this as a duplicate right away though.

cc @weizhen

Light Tree is really slow to preview textures

I think this is expected as said in the manual because more processing is happening per sample

> This is related to not building the Light Tree in parallel which is an open todo from #77889. I'm unsure if I should mark this as a duplicate right away though. cc @weizhen > Light Tree is really slow to preview textures I think this is expected as said in the [manual](https://docs.blender.org/manual/en/3.6/render/cycles/render_settings/sampling.html#bpy-types-cyclesrendersettings-use-light-tree:~:text=at%20the%20cost%20of%20a%20somewhat%20longer%20render%20time%20per%20sample.) because more processing is happening per sample
Member

Hey! This is not a problem of "more processing time per sample", it's the pre-processing (building the light tree) that takes too long because there are too many emissive triangles, should have mentioned that in the manual.
We do have plan in the very near future to build the light tree in parallel, actually just discussed this yesterday, I hope things will get better then. For now, if you still want to use light tree in the scene, you can disable Emission Sampling for problematic emissive objects, so they are not added to the light tree Screenshot 2023-03-15 at 11.50.26.png
We have Emission Sampling in the manual

Hey! This is not a problem of "more processing time per sample", it's the pre-processing (building the light tree) that takes too long because there are too many emissive triangles, should have mentioned that in the manual. We do have plan in the very near future to build the light tree in parallel, actually just discussed this yesterday, I hope things will get better then. For now, if you still want to use light tree in the scene, you can disable Emission Sampling for problematic emissive objects, so they are not added to the light tree ![Screenshot 2023-03-15 at 11.50.26.png](/attachments/57e574b7-3468-416a-ba12-e35b2eb6dcc6) We have Emission Sampling in the [manual](https://docs.blender.org/manual/en/3.6/render/cycles/material_settings.html#surface)
Author

We have Emission Sampling in the manual

I thought this was to choose if the face normal or the backface where used as emission surface or not, didn't associate this option to "light tree" since it only mention "sampling" something for cycles to use ¿?.
image

Light Tree is really slow to preview textures

I think this is expected as said in the manual because more processing is happening per sample

As mentioned above the problem in this case is not more time per sampling, since its only for material/texture preview, the problem its the initialization time.

We do have plan in the very near future to build the light tree in parallel, actually just discussed this yesterday, I hope things will get better then

that's great to know, for the moment there is the option to disable sampling (i just learn that thanks for the info) or disable light tree, at least we have options its not that critical of a problem.

> We have Emission Sampling in the [manual](https://docs.blender.org/manual/en/3.6/render/cycles/material_settings.html#surface) I thought this was to choose if the face normal or the backface where used as emission surface or not, didn't associate this option to "light tree" since it only mention "sampling" something for cycles to use ¿?. ![image](/attachments/0070745e-0544-4144-824b-258eea91eafe) >>Light Tree is really slow to preview textures >I think this is expected as said in the manual because more processing is happening per sample As mentioned above the problem in this case is not more time per sampling, since its only for material/texture preview, the problem its the initialization time. >We do have plan in the very near future to build the light tree in parallel, actually just discussed this yesterday, I hope things will get better then that's great to know, for the moment there is the option to disable sampling (i just learn that thanks for the info) or disable light tree, at least we have options its not that critical of a problem.
117 KiB

The heuristic from 4fba59c also addresses this, with the steps in this bug report it will no longer include the heavy mesh in the light tree now.

I think we can consider this not a bug, and #105862 will help speed this up as well.

The heuristic from 4fba59c also addresses this, with the steps in this bug report it will no longer include the heavy mesh in the light tree now. I think we can consider this not a bug, and #105862 will help speed this up as well.
Blender Bot added
Status
Archived
and removed
Status
Needs Info from Developers
labels 2023-03-20 15:33:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105550
No description provided.