intern/cycles/scene/light_tree.h
@@ -8,6 +8,7 @@
 #include "scene/scene.h"
 
 #include "util/boundbox.h"
+#include "util/task.h"
 #include "util/types.h"
 #include "util/vector.h"
 
@@ -95,11 +96,11 @@ struct LightTreeNode {
   OrientationBounds bcone;
   float energy;
   uint bit_trail;
-  int num_prims = -1;
-  union {
-    int first_prim_index;  /* leaf nodes contain an index to first primitive. */
-    int right_child_index; /* interior nodes contain an index to second child. */
-  };
+  int num_prims = -1;                    /* The number of primitives a leaf node stores. A negative
+                                            number indicates it is an inner node. */
+  int first_prim_index;                  /* Leaf nodes contain an index to first primitive. */
+  unique_ptr<LightTreeNode> children[2]; /* Inner node. */
+
   LightTreeNode() = default;
 
   LightTreeNode(const BoundBox &bbox,
@@ -115,10 +116,6 @@ struct LightTreeNode {
     this->first_prim_index = first_prim_index;
     this->num_prims = num_prims;
   }
-  void make_interior(const int &right_child_index)
-  {
-    this->right_child_index = right_child_index;
-  }
 
   inline bool is_leaf() const
   {
@@ -131,19 +128,54 @@ struct LightTreeNode {
  * BVH-like data structure that keeps track of lights
  * and considers additional orientation and energy information */
 class LightTree {
-  vector<LightTreeNode> nodes_;
+  unique_ptr<LightTreeNode> root;
+  atomic<int> num_nodes = 0;
   uint max_lights_in_leaf_;
 
  public:
+  /* Left or right child of an inner node. */
+  enum Child {
+    left = 0,
+    right = 1,
+  };
+
   LightTree(vector<LightTreePrimitive> &prims,
             const int &num_distant_lights,
             uint max_lights_in_leaf);
 
-  const vector<LightTreeNode> &get_nodes() const;
+  int size() const
+  {
+    return num_nodes;
+  };
+
+  LightTreeNode *get_root() const
+  {
+    return root.get();
+  };
+
+  /* NOTE: Always use this function to create a new node so the number of nodes is in sync. */
+  unique_ptr<LightTreeNode> create_node(const BoundBox &bbox,
+                                        const OrientationBounds &bcone,
+                                        const float &energy,
+                                        const uint &bit_trial)
+  {
+    num_nodes++;
+    return make_unique<LightTreeNode>(bbox, bcone, energy, bit_trial);
+  }
 
  private:
-  int recursive_build(
-      int start, int end, vector<LightTreePrimitive> &prims, uint bit_trail, int depth);
+  /* Thread. */
+  TaskPool task_pool;
+  /* Do not spawn a thread if less than this amount of primitives are to be processed. */
+  enum { MIN_PRIMS_PER_THREAD = 4096 };
+
+  void recursive_build(Child child,
+                       LightTreeNode *parent,
+                       int start,
+                       int end,
+                       vector<LightTreePrimitive> *prims,
+                       uint bit_trail,
+                       int depth);
   float min_split_saoh(const BoundBox &centroid_bbox,
                        int start,
                        int end,
